<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgonyAunt</string>
    <string name="answer">Enter your answer </string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="preferences">My Preferences</string>
    <string name="profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mood_tracker">MoodTracker</string>
    <string name="title_activity_intervention">Intervention</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="action_settings">Settings</string>
    <string name="sex0">Female</string>
    <string name="sex1">Male</string>
    <string name="username">My Username</string>
    <string name="occupation">My Occupation</string>
    <string name="age">Age</string>
    <string name="title_activity_my_preferences">MyPreferences</string>
    <string name="intervFreqQ">How often would you like to receive interventions during the day</string>
    <string name="unavailQ">When would you prefer to receive interventions during the day</string>
    <string name="freq1">1</string>
    <string name="freq2">2</string>
    <string name="freq3">3</string>
    <string name="freq4">4</string>
    <string name="freq5">5</string>
    <string name="freq6">6</string>
    <string name="freq7">7</string>
    <string name="title_activity_create_notification">CreateNotificationActivity</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="question1">How fulfilled do you feel today?</string>
    <string name="low1">Not very</string>
    <string name="low2">OK</string>
    <string name="low3">Very</string>
    <string name="button_next">Next</string>
    <string name="title_activity_question2">Question2</string>
    <string name="resultString"></string>
    <string name="freqCount">freqCount</string>
    <string name="title_activity_intervention_notifier">InterventionNotifier</string>
    <string name="control1"></string>
    <string name="title_activity_alarm">Alarm</string>

</resources>