<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/chat_background"
    tools:context=".MyProfile" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/occupation"
        android:layout_marginTop="23dp" >

        <RadioButton
            android:id="@+id/sex0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sex0" />

        <RadioButton
            android:id="@+id/sex1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex1" />

    </RadioGroup>

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/occupation"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/age"
        android:layout_alignEnd="@+id/age" />

    <Button
        android:id="@+id/BtnSaveProfile"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="Save"
        android:layout_marginRight="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/occupation"
        android:layout_alignEnd="@+id/occupation"
        android:onClick="saveProfile" />

    <Button
        android:id="@+id/backButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:onClick="backButtonProfile"
        android:layout_alignTop="@+id/BtnSaveProfile"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_alignEnd="@+id/radioGroup1" />

</RelativeLayout>